added transaction edit, reworked selection model, introduced immer for easier state management
